Implemented suggestions
Added abstract class for test setups
Updated pom.xml such that the build works on all platforms
Added actual JavaFX support to pom.xml
Now the program actually prints a window